Refactor - Update packages - Split handlers - Correct typing for slash commands - New Mongo functions - Refactor edit.ts into manage.ts subcommand - Manage command - Autocomplete handler - Update config type - Always push commands globally instead of per guild

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,5 +1,6 @@
 {
     "clientID": "BotID",
     "DatabaseName": "GlobalBadges",
-    "CollectionName": "database"
+    "CollectionName": "database",
+    "maxBadges": 5
 }
