--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "lint": "eslint src/**/* config/* -c .eslintrc"
   },
   "devDependencies": {
     "@types/node": "^20.3.2",
@@ -12,7 +15,7 @@
     "eslint": "^8.43.0",
     "eslint-plugin-json": "^3.1.0",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.3",
+    "typescript": "^5.1.5",
     "typescript-eslint": "0.0.1-alpha.0",
     "typescript-eslint-language-service": "^5.0.5"
   },
