Closer to Completion - KNOWN BUGS:  - Deleting a badge will cause it to delete everything in the user entry *except* said badge - ESLint allow Non-null assertions - Update packages  - Typescript 5.1.5 -> 5.1.6 - Temporary note file (temp.dev.testing.aspy.json) - Added config option to set prompt channel - Combined imports and set import type individually - Mongo refactoring - No longer lint the database multiple times in one database operation - Add pending badges to list command - Removed ability to change badge name (Just delete and start over for less confusion) - Refactor manage command - Base of actual verification prompt - Fire verification prompt on manage commands - Implement edit badge URLs

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
         ],
         "prefer-const": [
             "error"
-        ]
+        ],
+        "@typescript-eslint/no-non-null-assertion": "off"
     }
 }
