--- a/config/config.example.json
+++ b/config/config.example.json
@@ -2,5 +2,6 @@
     "clientID": "BotID",
     "DatabaseName": "GlobalBadges",
     "CollectionName": "database",
-    "maxBadges": 5
+    "maxBadges": 5,
+    "promptChannel": "ChannelID"
 }
