Small Changes - Update NPM packages - Move to ESLint flat config - Add funding button - Rename clientID to ClientId - Rename maxBadges to MaxBadges - Fix REST API processing being inside console.log()

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,7 +1,7 @@
 {
-    "clientID": "BotID",
+    "ClientId": "Bot ID",
     "DatabaseName": "GlobalBadges",
     "CollectionName": "database",
-    "maxBadges": 5,
+    "MaxBadges": 5,
     "promptChannel": "ChannelID"
 }
