--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "lint": "eslint src/**/* config/* -c .eslintrc"
+    "lint": "eslint"
   },
   "devDependencies": {
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint": "^8.43.0",
+    "@types/node": "^20.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
     "eslint-plugin-json": "^3.1.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@discordjs/rest": "^1.7.1",
-    "discord-api-types": "^0.37.46",
+    "discord-api-types": "^0.37.47",
     "discord.js": "^14.11.0",
     "mongodb": "^5.6.0"
   }
