Refactoring and progress - Moved from ESLint flat config to .eslintrc - Corrected lint script - Updated NPM packages - Added domain whitelist - Capitalized variables in config.json - Implemented autocomplete support - Reformatted database - Fixed badge delete function - Async with misused promises (in button.ts and mongo.ts) - Updated types

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -3,5 +3,10 @@
     "DatabaseName": "GlobalBadges",
     "CollectionName": "database",
     "MaxBadges": 5,
-    "promptChannel": "ChannelID"
+    "PromptChannel": "ChannelID",
+    "Domains": [
+        "media.discordapp.net",
+        "cdn.discordapp.com",
+        "tenor.com"
+    ]
 }
