--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "lint": "eslint"
+    "lint": "eslint src/**/* config/* -c .eslintrc"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
@@ -23,6 +23,6 @@
     "@discordjs/rest": "^1.7.1",
     "discord-api-types": "^0.37.47",
     "discord.js": "^14.11.0",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.7.0"
   }
 }
