Verification groundwork - Add role for verifiers to config - Update types accordingly - Move verification from handler to lib - Process button presses instead of dropping them

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -4,6 +4,7 @@
     "CollectionName": "database",
     "MaxBadges": 5,
     "PromptChannel": "ChannelID",
+    "VerifierRole": "554356800",
     "Domains": [
         "media.discordapp.net",
         "cdn.discordapp.com",
