--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/src/index.js",
     "build": "tsc",
-    "lint": "eslint src/**/* config/* -c .eslintrc"
+    "lint": "eslint -c .eslintrc.cjs src/**/* config/**/*"
   },
   "devDependencies": {
-    "@types/node": "^20.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.47.0",
+    "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
     "eslint-plugin-json": "^3.1.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "typescript-eslint-language-service": "^5.0.5"
   },
   "dependencies": {
     "@discordjs/rest": "^2.0.1",
-    "discord-api-types": "^0.37.54",
+    "discord-api-types": "^0.37.56",
     "discord.js": "^14.13.0",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.8.1"
+  },
+  "optionalDependencies": {
+    "tsx": "^3.12.8"
   }
 }
