--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
         "useUnknownInCatchVariables": true,
         "outDir": "dist",
         "target": "ESNext",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
         "types": [
             "node"
         ],
