Minor refactor - Consolidate credentials and config into one file - Update @types/node - Better imports of configs

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,4 +1,6 @@
 {
+    "DiscordToken": "BotToken",
+    "MongoDB": "mongodb://localhost:27017",
     "ClientId": "Bot ID",
     "DatabaseName": "GlobalBadges",
     "CollectionName": "database",
