--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@discordjs/rest": "^2.2.0",
     "discord.js": "^14.14.1",
-    "mongodb": "^6.3.0"
+    "minio": "^7.1.3",
+    "mongodb": "^6.3.0",
+    "stream-mime-type": "^2.0.0"
   },
   "optionalDependencies": {
     "tsx": "^4.7.0"
