--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "dev": "tsx src/index.ts",
     "start": "node dist/src/index.js",
     "build": "tsc",
-    "lint": "eslint -c .eslintrc.json src config/*"
+    "lint": "eslint -c .eslintrc.json \"**/*.{ts}\""
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@types/node": "^20.11.10",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
   },
@@ -17,8 +17,7 @@
     "@discordjs/rest": "^2.2.0",
     "discord.js": "^14.14.1",
     "minio": "^7.1.3",
-    "mongodb": "^6.3.0",
-    "stream-mime-type": "^2.0.0"
+    "mongodb": "^6.3.0"
   },
   "optionalDependencies": {
     "tsx": "^4.7.0"
