--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "include": [
         "src/**/*.ts",
         "config/*.json",
+        "eslint.config.js"
     ],
     "exclude": [
         "node_modules",
