--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "type": "module",
-  "scripts": {
-    "dev": "tsx src/index.ts",
-    "start": "node dist/src/index.js",
-    "build": "tsc",
-    "lint": "eslint \"**/*.ts\" ."
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.14.2",
-    "eslint": "^9.4.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.12.0"
-  },
-  "dependencies": {
-    "@discordjs/rest": "^2.3.0",
-    "discord.js": "^14.15.3",
-    "minio": "^8.0.0",
-    "mongodb": "^6.7.0"
-  },
-  "optionalDependencies": {
-    "tsx": "^4.15.1"
-  },
-  "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
+    "type": "module",
+    "scripts": {
+        "dev": "tsx src/index.ts",
+        "start": "node dist/src/index.js",
+        "build": "tsc",
+        "lint": "eslint \"**/*.ts\" ."
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.4.0",
+        "@types/eslint__js": "^8.42.3",
+        "@types/node": "^20.14.2",
+        "eslint": "^9.4.0",
+        "typescript": "^5.4.5",
+        "typescript-eslint": "^7.13.0"
+    },
+    "dependencies": {
+        "@discordjs/rest": "^2.3.0",
+        "discord.js": "^14.15.3",
+        "minio": "^8.0.0",
+        "mongodb": "^6.7.0"
+    },
+    "optionalDependencies": {
+        "tsx": "^4.15.4"
+    },
+    "packageManager": "pnpm@9.1.4"
 }
