--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
     "type": "module",
     "scripts": {
-        "dev": "tsx src/index.ts",
-        "start": "node dist/src/index.js",
+        "dev": "tsx --env-file=.env src/main.ts",
+        "start": "node --env-file=.env dist/main.js",
         "build": "tsc",
-        "lint": "eslint \"**/*.ts\" ."
+        "lint": "eslint"
     },
     "devDependencies": {
-        "@eslint/js": "^9.4.0",
+        "@eslint/js": "^9.8.0",
         "@types/eslint__js": "^8.42.3",
-        "@types/node": "^20.14.2",
-        "eslint": "^9.4.0",
+        "@types/node": "^22.1.0",
+        "eslint": "^9.8.0",
+        "prettier": "^3.3.3",
+        "tsx": "^4.16.5",
         "typescript": "^5.4.5",
-        "typescript-eslint": "^7.13.0"
+        "typescript-eslint": "^8.0.0"
     },
     "dependencies": {
-        "@discordjs/rest": "^2.3.0",
         "discord.js": "^14.15.3",
-        "minio": "^8.0.0",
-        "mongodb": "^6.7.0"
+        "minio": "^8.0.1",
+        "mongodb": "^6.8.0"
     },
-    "optionalDependencies": {
-        "tsx": "^4.15.4"
-    },
-    "packageManager": "pnpm@9.1.4"
+    "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
