--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,29 @@
 {
     "compilerOptions": {
-        "allowUnreachableCode": false,
-        "allowUnusedLabels": false,
-        "alwaysStrict": true,
         "exactOptionalPropertyTypes": true,
-        "noImplicitAny": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
-        "noImplicitThis": true,
         "noPropertyAccessFromIndexSignature": true,
         "noUncheckedIndexedAccess": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "strict": true,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "strictPropertyInitialization": true,
-        "useUnknownInCatchVariables": true,
-        "outDir": "dist",
-        "target": "ESNext",
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
-        "types": [
-            "node"
-        ],
-        "esModuleInterop": true,
-        "removeComments": true,
         "resolveJsonModule": true,
+        "rootDir": "src",
+        "outDir": "dist",
+        "removeComments": true,
         "lib": [
             "ESNext",
         ],
+        "target": "ESNext",
     },
     "include": [
-        "src/**/*.ts",
-        "config/*.json",
-        "eslint.config.js"
+        "src/**/*",
     ],
     "exclude": [
         "node_modules",
-        "dist",
+        "dist"
     ]
 }
