--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-    "type": "module",
-    "scripts": {
-        "dev": "tsx --env-file=.env src/main.ts",
-        "start": "node --env-file=.env dist/main.js",
-        "build": "tsc",
-        "lint": "eslint"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.9.1",
-        "@types/eslint__js": "^8.42.3",
-        "@types/node": "^22.5.0",
-        "eslint": "^9.9.1",
-        "prettier": "^3.3.3",
-        "tsx": "^4.18.0",
-        "typescript": "^5.5.4",
-        "typescript-eslint": "^8.2.0"
-    },
-    "dependencies": {
-        "discord.js": "^14.15.3",
-        "minio": "^8.0.1",
-        "mongodb": "^6.8.0"
-    },
-    "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
+	"type": "module",
+	"scripts": {
+		"dev": "tsx --env-file=.env src/main.ts",
+		"start": "node --env-file=.env dist/main.js",
+		"build": "tsc",
+		"lint": "biome check",
+		"lint:fix": "biome check --write"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.0.5",
+		"@types/node": "^24.0.3",
+		"tsx": "^4.20.3",
+		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"discord.js": "^14.20.0",
+		"minio": "^8.0.5",
+		"mongodb": "^6.17.0"
+	},
+	"packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f"
 }
