--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
 		"lint:fix": "biome check --write"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.0.5",
-		"@types/node": "^24.0.3",
-		"tsx": "^4.20.3",
-		"typescript": "^5.8.3"
+		"@biomejs/biome": "^2.4.2",
+		"@types/node": "^25.2.3",
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
-		"discord.js": "^14.20.0",
-		"minio": "^8.0.5",
-		"mongodb": "^6.17.0"
+		"discord.js": "^14.25.1",
+		"minio": "^8.0.6",
+		"mongodb": "^7.1.0"
 	},
-	"packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f",
+	"packageManager": "pnpm@11.0.0-dev.1005+sha512.91f84a392eea348ea4852a182912d2520273a4336f933b78cc44bc931eb999923c097e9433a9b355adc1f725725ea99082fc9f032a559df832632e764c92c798",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
